# grounddocs

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: deploy.yml
frontend/: README.md  bun.lockb  index.html  package-lock.json  package.json  vite.config.ts
frontend/database/: schema.sql
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Breadcrumb.tsx  DashboardLayout.tsx  FeatureList.tsx  Hero.tsx  Navbar.tsx  SideBar.tsx  SourceVerifiedImage.tsx
frontend/src/components/APIKeys/: APIKeyCreatedDialog.tsx  CreateAPIKeyDialog.tsx  DeleteAPIKeyDialog.tsx
frontend/src/lib/: supabase.ts
frontend/src/pages/: APIKeys.tsx  Billing.tsx  Home.tsx  Index.tsx  SignIn.tsx  SignUp.tsx
frontend/src/services/: apiKeys.ts
src/: index.ts
src/tools/: kubernetes-documentation.ts  python-documentation.ts  server.py
src/utils/: callback-server.ts  config.ts  console.ts  get-content-of-file.ts  http-client.test.ts  http-client.ts
